[gd_scene load_steps=7 format=3 uid="uid://dgv4buxnd8ejl"]

[ext_resource type="PackedScene" uid="uid://c3cpm3w7xv2o4" path="res://Models/templeGoon.gltf" id="1_bodcd"]
[ext_resource type="Script" path="res://Scripts/templeGoon.gd" id="2_8y2fm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6v8eq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xa0ot"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ndqt8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_63yck"]

[node name="templeGoon" instance=ExtResource("1_bodcd")]
script = ExtResource("2_8y2fm")

[node name="Root" parent="Node" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.4375, 0)

[node name="ball" type="Area3D" parent="Node/Root/sphere" index="0"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, -3.64251e-08, 0, 3.64251e-08, 1.1, 0, -9.53674e-07, -1.78814e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node/Root/sphere/ball" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, -1.49012e-08, 0, 1.49012e-08, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_6v8eq")
disabled = true

[node name="ArmL" parent="Node/Root" index="1"]
transform = Transform3D(0.642949, -0.752904, 0.140541, 0.734637, 0.658124, 0.164868, -0.216623, -0.00275529, 0.976251, -0.40625, 0.1875, 0)

[node name="ElbowL" parent="Node/Root/ArmL" index="2"]
transform = Transform3D(0.19509, 0, -0.980785, 0, 1, 0, 0.980785, 0, 0.19509, -0.4375, 0, 0)

[node name="leftHand" type="Area3D" parent="Node/Root/ArmL/ElbowL/sphere4" index="0"]
transform = Transform3D(1, 4.47035e-08, 1.49012e-08, 7.45058e-09, 1, 2.98023e-08, 1.49012e-08, -2.98023e-08, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node/Root/ArmL/ElbowL/sphere4/leftHand" index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_6v8eq")
disabled = true

[node name="ArmR" parent="Node/Root" index="2"]
transform = Transform3D(0.624417, 0.594074, 0.507129, -0.49683, 0.803065, -0.329009, -0.602713, -0.0465184, 0.796601, 0.40625, 0.1875, 0)

[node name="ElbowR" parent="Node/Root/ArmR" index="2"]
transform = Transform3D(0.0565181, 0, 0.998402, 0, 1, 0, -0.998402, 0, 0.0565181, 0.4375, 0, 0)

[node name="rightHand" type="Area3D" parent="Node/Root/ArmR/ElbowR/sphere7" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node/Root/ArmR/ElbowR/sphere7/rightHand" index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_6v8eq")
disabled = true

[node name="LegL" parent="Node/Root" index="3"]
transform = Transform3D(0.996195, 0.0539466, -0.0684536, -0.0805215, 0.870241, -0.486001, 0.0333531, 0.489664, 0.871273, -0.15625, -0.40625, 0)

[node name="KneeL" parent="Node/Root/LegL" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.753488, -0.657461, 0, 0.657461, 0.753488, 0, -0.625, 0)

[node name="LegR" parent="Node/Root" index="4"]
transform = Transform3D(0.998182, -0.0313983, 0.0514423, 0.0120395, 0.940248, 0.340276, -0.0590526, -0.339039, 0.938917, 0.15625, -0.40625, 0)

[node name="KneeR" parent="Node/Root/LegR" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, 0, -0.625, 0)

[node name="templeGoon" type="Area3D" parent="Node/Root" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 0, 0, 0)

[node name="hitBox" type="CollisionShape3D" parent="Node/Root/templeGoon" index="0"]
transform = Transform3D(1, 5.82077e-11, 0, 5.82077e-11, 1, -7.45058e-09, 0, -7.45058e-09, 1, 0, -0.5, 0)
shape = SubResource("CapsuleShape3D_xa0ot")

[node name="RigidBody3D" type="RigidBody3D" parent="Node/Root" index="6"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, -1.38852, -0.372052)
physics_material_override = SubResource("PhysicsMaterial_ndqt8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node/Root/RigidBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_63yck")
